--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==1.0.0
 Django==4.1.2
 django-cors-headers==3.13.0
+django-on-heroku==1.1.2
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 drf-yasg==1.21.4
@@ -22,6 +24,7 @@ MarkupSafe==2.1.1
 openapi-codec==1.3.2
 packaging==21.3
 platformdirs==2.5.2
+psycopg2-binary==2.9.4
 pyparsing==3.0.9
 pytz==2022.4
 requests==2.28.1
